# ScratchEngine

./: CMakeLists.txt  GenerateProject.bat
Runtime/: Application.cpp  Application.h  GfxDevice.cpp  GfxDevice.h  main.cpp
